src/test/deca/context/invalid/resultats/test_implicit_downcast-cont.res
./src/test/deca/context/invalid/test_implicit_downcast.deca:31:7: RValue's type is not compatible with the expected type (type : A; expectedType :B)
